--- a/src/styles/transition.less
+++ b/src/styles/transition.less
@@ -51,12 +51,12 @@
 
 .uido-enter-from {
   opacity: 0;
-  transform: translateY(20px);
+  transform: translateY(10%);
 }
 
 .uido-leave-to {
   opacity: 0;
-  transform: translateY(20px);
+  transform: translateY(10%);
 }
 
 /*
