🥎 新增节点, 组件, 若干优化

--- a/src/components/form-make/form-make.less
+++ b/src/components/form-make/form-make.less
@@ -96,6 +96,7 @@
     border: 1px solid #eee;
     border-radius: 4px;
     background-color: #fff;
+    border-radius: var(--border-radius-large);
 
     .mobile {
       border-radius: 4px;
@@ -234,8 +235,8 @@
     justify-content: space-between;
     margin: 10px;
 
-    &-name {
-      width: 70px;
+    .form-item-name {
+      width: 90px;
       line-height: 31.5px;
       text-align: right;
       font-weight: 400;
@@ -245,7 +246,7 @@
       padding-right: 8px;
     }
 
-    &-widget {
+    .form-item-widget {
       flex: 1;
       margin-left: 10px;
 
