--- a/src/styles/arco.less
+++ b/src/styles/arco.less
@@ -1,5 +1,5 @@
 .general-card {
-  border-radius: 4px;
+  border-radius: var(--border-radius-medium);
   border: none;
 }
 
@@ -11,7 +11,7 @@
   padding: 4px;
   width: fit-content;
   height: fit-content;
-  border-radius: 4px;
+  border-radius: var(--border-radius-medium);
   overflow: hidden;
 
   &:hover {
@@ -26,5 +26,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+}
+
+// 完善arco表格, 添加radius
+.arco-table-container {
+  border-radius: var(--border-radius-medium) !important;
+
+  tbody {
+    .arco-table-tr:last-child {
+      .arco-table-td:first-child {
+        border-bottom-left-radius: var(--border-radius-medium) !important;
+      }
+      .arco-table-td:last-child {
+        border-bottom-right-radius: var(--border-radius-medium) !important;
+      }
+    }
   }
 }
