[新增]: 数据管理

--- a/src/styles/variables.module.less
+++ b/src/styles/variables.module.less
@@ -7,12 +7,12 @@
 @SiderbarIconSize: 32px;
 
 // 内容区域
-// @MainContentBg: #f2f4f5;
+// @MainContentBg: #f2f3f5;
 @MainContentBg: #f2f3f5;
 @ContentPadding: 20px;
 
 // 导航栏区域
-@BreadcrumbHeight: 46px;
+@BreadcrumbHeight: 45px;
 
 // 全局参数
 @CommonBorderRedius: 4px;
@@ -20,6 +20,9 @@
 // 流程卡片
 @FlowCardWidth: 300px;
 @FlowCardFieldLabelWidth: 70px;
+
+// 分页
+@FenyeHeight: 55px;
 
 :export {
   headerheight: @HeaderHeight;
@@ -36,4 +39,6 @@
 
   FlowCardWidth: @FlowCardWidth;
   FlowCardFieldLabelWidth: @FlowCardFieldLabelWidth;
+
+  FenyeHeight: @FenyeHeight;
 }
