--- a/src/components/form-make/form-make.less
+++ b/src/components/form-make/form-make.less
@@ -1,3 +1,5 @@
+@import "@/styles/variables.module.less";
+
 @field-box-width: 360px;
 @widget-border-color: #3370ff;
 @field-top-height: 48px;
@@ -101,7 +103,7 @@
     .mobile {
       border-radius: 4px;
       border: 1px solid rgba(0, 0, 0, 0.1);
-      background-color: #f4f5f6;
+      background-color: @MainContentBg;
       height: 100%;
       overflow: hidden;
       overflow-y: auto;
