--- a/src/styles/arco.less
+++ b/src/styles/arco.less
@@ -33,6 +33,15 @@
 .arco-table-container {
   border-radius: var(--border-radius-medium) !important;
 
+  .arco-table-th {
+    color: var(--color-text-2);
+    background-color: #fafafa;
+  }
+
+  .arco-table-td {
+    border-bottom: 1px solid var(--color-neutral-2);
+  }
+
   tbody {
     .arco-table-tr:last-child {
       .arco-table-td:first-child {
