--- a/src/views/my-flow/flow-base.less
+++ b/src/views/my-flow/flow-base.less
@@ -2,16 +2,16 @@
 
 @SearchBoxHeight: 56px;
 @SearchMoreBoxHeight: 20px;
-@CommonPadding: 16px;
 @FlowCardGap: 12px;
 @SiderWidth: 330px;
 
 .flow-approve-box {
   width: 100%;
-  height: calc(100vh - @HeaderHeight - @BreadcrumbHeight);
+  height: calc(100vh - @AppHeaderHeight - @AppBreadcrumbHeight);
   overflow: hidden;
-  padding: 0 @ContentPadding;
+  padding: 0 @LayoutGap;
   display: flex;
+  gap: @LayoutGap;
 
   .flow-content {
     width: @SiderWidth;
@@ -19,14 +19,14 @@
     height: calc(100%);
     overflow: hidden;
     background: #fff;
-    border-radius: 6px;
+    border-radius: @BorderRadius;
   }
 
   .search-box {
     display: flex;
     align-items: center;
     height: @SearchBoxHeight;
-    padding: 0 @CommonPadding;
+    padding: 0 @GapSmall;
 
     .search-segment + .search-segment {
       margin-left: 4px;
@@ -40,15 +40,15 @@
 
   .flow-list-box {
     background-color: #fff;
-    padding: 0 @CommonPadding;
-    height: calc(100vh - @HeaderHeight - @BreadcrumbHeight - @SearchBoxHeight);
+    padding: 0 @GapSmall;
+    height: calc(100vh - @AppHeaderHeight - @AppBreadcrumbHeight - @SearchBoxHeight);
     overflow: hidden auto;
     scroll-snap-type: y mandatory;
     will-change: scroll-position;
 
     .empty-box {
       background-color: #fff;
-      padding: 0 @CommonPadding;
+      padding: 0 @GapSmall;
       padding-top: 20%;
     }
 
@@ -87,48 +87,7 @@
     height: calc(100%);
     overflow: hidden;
     background: #fff;
-    border-radius: 6px;
-    margin-left: 20px;
+    border-radius: @BorderRadius;
     flex: auto;
-  }
-}
-
-.flow-search-more-popover {
-  @BlockGap: 12px;
-
-  .arco-trigger-content {
-    padding: 0;
-    .arco-popover-content {
-      margin: 0;
-    }
-  }
-
-  .search-more-title {
-    color: var(--color-text-1);
-    font-size: 15px;
-    padding: 10px 16px;
-    user-select: none;
-    border-bottom: 1px solid var(--color-neutral-3);
-  }
-
-  .search-more-box {
-    margin-top: @BlockGap;
-    transition: all 0.3s;
-    display: grid;
-    width: 280px;
-    grid-template-columns: repeat(auto-fill);
-    gap: 12px;
-    padding: 0 16px;
-  }
-
-  .search-more-action {
-    padding: @BlockGap 16px;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-
-    button + button {
-      margin-left: 10px;
-    }
   }
 }
