--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -4,7 +4,7 @@
   height: @FenyeHeight;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 // 更多检索弹出框
@@ -40,7 +40,7 @@
     padding: @BlockGap 16px;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 
     button + button {
       margin-left: 10px;
