--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -54,7 +54,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow-y: auto;
+  // overflow-y: auto;
+  overflow: hidden;
 }
 
 @font-face {
